anthos-service-mesh/cluster_setup/asm-ingress/ingress-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: base-domain
  namespace: asm-ingress
spec:
  host: "${BASE_DOMAIN}"
  trafficPolicy:
    tls:
      mode: SIMPLE
