anthos-service-mesh/cluster_setup/asm-ingress/ingress-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: base-domain
  namespace: asm-ingress
spec:
  hosts:
    - ${BASE_DOMAIN}
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
